--- a/Portal-auth0/Views/Shared/_Layout.cshtml
+++ b/Portal-auth0/Views/Shared/_Layout.cshtml
@@ -27,9 +27,12 @@
                         </li>
                         @if (User.Identity.IsAuthenticated)
                         {
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="">Admin Page</a>
-                            </li>
+                            @if(User.IsInRole("Admin")){
+
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="AdminPage">Admin Page</a>
+                                </li>
+                            }
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Profile">Profile</a>
                             </li>
